<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/parent_layout_margin"
            tools:context=".view.LoginUserActivity">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tracking_128"
                android:layout_margin="@dimen/vertical_spacing_between_views"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/loginUserEmailTIL"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/loginUserEmailTIL"
                app:layout_constraintBottom_toTopOf="@id/loginUserPasswordTIL"
                android:layout_margin="@dimen/vertical_spacing_between_views">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginUserEmailET"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_et_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/loginUserPasswordTIL"
                app:layout_constraintBottom_toTopOf="@id/loginUserLoginBtn"
                android:layout_margin="@dimen/vertical_spacing_between_views">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginUserPasswordET"
                    android:inputType="textPassword"
                    android:hint="@string/password_et_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_str"
                android:id="@+id/loginUserLoginBtn"
                style="@style/CustomButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_margin="@dimen/vertical_spacing_between_views"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="loginClickedOnLoginScreen"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_str"
                style="@style/CustomButton"
                android:id="@+id/loginUserSignUpBtn"
                android:onClick="goToRegisterActivity"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_margin="@dimen/vertical_spacing_between_views"
                app:layout_constraintTop_toBottomOf="@id/loginUserLoginBtn"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
